--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   </head>
   <body>
     <script type="text/javascript" src="https://storage.googleapis.com/code.getmdl.io/1.0.4/material.min.js"></script>
-    <script type="text/javascript" src="/dist/bundle.js"></script>
+    <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
